Day3/terraform/modules/vpc/main.tf
# ---------------------------VPC & Subnets---------------------------

resource "aws_vpc" "main" {
  cidr_block           = var.vpc_cidr
  enable_dns_hostnames = true
  enable_dns_support   = true
  tags =  { Name = "${var.project}-vpc" }
}

resource "aws_subnet" "public" {
  count                   = 3
  vpc_id                  = aws_vpc.main.id
  cidr_block              = var.public_subnet_cidrs[count.index]
  availability_zone       = var.availability_zones[count.index]
  map_public_ip_on_launch = true
  tags =  {
    Name = "${var.project}-pub-sn-${substr(var.availability_zones[count.index], -1, 1)}"
  }
}

resource "aws_subnet" "private" {
  count             = 3
  vpc_id            = aws_vpc.main.id
  cidr_block        = var.private_subnet_cidrs[count.index]
  availability_zone = var.availability_zones[count.index]
  tags =  {
    Name = "${var.project}-priv-sn-${substr(var.availability_zones[count.index], -1, 1)}"
  }
}

resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id
  tags   =  { Name = "${var.project}-igw" }
}

# ---------------------------NAT Gateway---------------------------

resource "aws_eip" "nat_a" {
  domain = "vpc"
}

resource "aws_eip" "nat_b" {
  domain = "vpc"
}

resource "aws_eip" "nat_c" {
  domain = "vpc"
}

resource "aws_nat_gateway" "main_a" {
  allocation_id = aws_eip.nat_a.id
  subnet_id     = aws_subnet.public[0].id
  tags          =  { Name = "${var.project}-ngw-a" }
  depends_on    = [aws_internet_gateway.main]
}

resource "aws_nat_gateway" "main_c" {
  allocation_id = aws_eip.nat_c.id
  subnet_id     = aws_subnet.public[1].id
  tags          =  { Name = "${var.project}-ngw-c" }
  depends_on    = [aws_internet_gateway.main]
}

resource "aws_nat_gateway" "main_b" {
  allocation_id = aws_eip.nat_b.id
  subnet_id     = aws_subnet.public[2].id
  tags          =  { Name = "${var.project}-ngw-b" }
  depends_on    = [aws_internet_gateway.main]
}

# ---------------------------Route Tables---------------------------

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main.id
  }
  tags =  { Name = "${var.project}-pub-rt" }
}

resource "aws_route_table_association" "public" {
  count          = 3
  subnet_id      = aws_subnet.public[count.index].id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table" "private_a" {
  vpc_id = aws_vpc.main.id
  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.main_a.id
  }
  tags =  { Name = "${var.project}-priv-rt-a" }
}

resource "aws_route_table_association" "private_a" {
  subnet_id      = aws_subnet.private[0].id
  route_table_id = aws_route_table.private_a.id
}


resource "aws_route_table" "private_c" {
  vpc_id = aws_vpc.main.id
  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.main_c.id
  }
  tags =  { Name = "${var.project}-priv-rt-c" }
}

resource "aws_route_table_association" "private_c" {
  subnet_id      = aws_subnet.private[1].id
  route_table_id = aws_route_table.private_c.id
}


resource "aws_route_table" "private_b" {
  vpc_id = aws_vpc.main.id
  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.main_b.id
  }
  tags =  { Name = "${var.project}-priv-rt-b" }
}

resource "aws_route_table_association" "private_b" {
  subnet_id      = aws_subnet.private[2].id
  route_table_id = aws_route_table.private_b.id
}
